--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ services:
   - docker build -t varghesepeter/docker-react -f Dockerfile.dev .
   
 script:
-  - docker run  -e CI=true varghesepeter/docker-react npm run test -- --coverage
-  
+  - docker run  varghesepeter/docker-react npm run test -- --coverage
+language: generic
