Aded travis deploy config on  .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ script:
 
 deploy:
   provider: elasticbeanstalk
-  region: us-east-1
+  region: "us-east-1" 
   app:  "docker-react"
   env:  "Dockerreact-env"
   bucket_name:  "elasticbeanstalk-us-east-1-181466562047"
