Aded travis deploy config on  .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,10 @@ deploy:
   provider: elasticbeanstalk
   region: "us-east-1" 
   app:  "docker-react"
-  env:  "Dockerreact-env-1"
+  env:  "Dockerreact-env1"
   bucket_name:  "elasticbeanstalk-us-east-1-181466562047"
   bucket_path:  "docker-react"
   on:
     branch: master
   access_key_id: $AWS_ACCESS_KEY
-  secret_access_key:
-    secure: "$AWS_SECRET_KEY"
+  secret_access_key: $AWS_SECRET_KEY
