--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ deploy:
   provider: elasticbeanstalk
   region: "us-east-1" 
   app:  "docker-react"
-  env:  "Dockerreact-env1"
+  env:  "Dockerreact-env"
   bucket_name:  "elasticbeanstalk-us-east-1-181466562047"
   bucket_path:  "docker-react"
   on:
